# sfdi_cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  arm64-linux-dynamic.cmake  main.cpp  pch.h  qt.conf  vcpkg-configuration.json  vcpkg.json  x64-arm64-toolchain.cmake  x64-linux-toolchain.cmake  x64-mingw-toolchain.cmake  x64-toolchain.cmake
CMakeToolchain/: x64-arm64-toolchain.cmake  x64-linux-toolchain.cmake  x64-mingw-toolchain.cmake
cmake/toolchain/: x64-arm64-toolchain.cmake  x64-mingw.cmake
hardware/: CMakeLists.txt
hardware/HTcam/: CMakeLists.txt
hardware/HTcam/inc/: IMVApi.h  IMVDefines.h
hardware/HTcam/lib/arm64/: libMVSDK.so.2.4.2.342978
hardware/HTcam/lib/arm64/GenICam/: CMakeLists.txt
hardware/HTcam/lib/arm64/dep/: CMakeLists.txt  liblog4cpp.so.5
hardware/HTcam/lib/win64/: MVSDKmd.lib
hardware/MVcam/: CMakeLists.txt
hardware/MVcam/inc/: CameraApi.h  CameraDefine.h
hardware/MVcam/lib/win64/: MVCAMSDK_X64.lib
hardware/dlp/: CMakeLists.txt
hardware/dlp/inc/: dlpc350_BMPParser.h  dlpc350_api.h  dlpc350_common.h  dlpc350_firmware.h  dlpc350_version.h
hardware/dlp/src/: dlpc350_BMPParser.cpp  dlpc350_api.cpp  dlpc350_common.cpp  dlpc350_firmware.cpp  dlpc350_usb.cpp
hardware/inc/: CamControl.hpp  DlpControl.hpp
hardware/src/: CamControl.cpp  DlpControl.cpp
inc/: grid_inverse.hpp  lookup.hpp  model_SFDI.hpp
reference_670/: Settings.txt
sample_670/: Settings.txt
sfdi-algorithm/: CMakeLists.txt
sfdi-algorithm/inc/: grid_forward.hpp  grid_inverse.hpp  lookup.hpp  model_SFDI.hpp
sfdi-algorithm/src/: grid_forward.cpp  grid_inverse.cpp  lookup.cpp  model_SFDI.cpp
sfdi-port/nlopt/: vcpkg.json
sfdi-ports/nlopt/: portfile.cmake
sfdi-ui/: CMakeLists.txt
sfdi-ui/inc/: MainWindow.h  MainWindow.hpp  colormap.hpp  compute_ctrl.hpp
sfdi-ui/src/: MainWindow.cpp  compute_ctrl.cpp
sfdi-ui/ui/: MainWindow.ui
src/: grid_inverse.cpp  lookup.cpp  main.cpp  model_SFDI.cpp
test-port/nlopt/: portfile.cmake  vcpkg.json
test-port/openblas/: portfile.cmake  vcpkg.json
